compiler/tools/fpp-check/test/tlm_packets/id_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/id_not_numeric.fpp:5.18
    packet P1 id "abc" group 0 {
                 ^
error: cannot convert string to a numeric type
